# eCommerce

./: CMakeLists.txt
untitled8/: CMakeLists.txt  ETicaretPlatformu.cpp  ETicaretPlatformu.h  Magaza.cpp  Magaza.h  Musteri.cpp  Musteri.h  MusteriUrunTavsiye.cpp  MusteriUrunTavsiye.h  PuanYorum.cpp  PuanYorum.h  SiparisBilgileri.cpp  SiparisBilgileri.h  SiparisUrunu.cpp  SiparisUrunu.h  UrunKategori.cpp  UrunKategori.h  UrunOzellikleri.cpp  UrunOzellikleri.h  Urun_bilgileri.cpp  Urun_bilgileri.h  main.cpp
